--- a/style.css
+++ b/style.css
@@ -5,10 +5,26 @@
     height: 100vh;
 }
 .form-cls{
-    width: 400px;
-    height: 350px;
+    width: 250px;
+    height: 200px;
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
 border-radius: 8px;
 padding: 40px 20px;
    
+}
+h1, h2{
+    font-size: 55px;
+}
+.lomba{
+    height: 100vh;
+}
+.ask{
+    display: none;
+}
+.proposed, .proposed-no{
+    background-color: #F56EB3;
+    display: none;
+}
+.fa-heart, .fa-heart-crack{
+    color: #FF0032;
 }
